# video-compression-parallelization

./: .gitignore  CMakeLists.txt  start_tests.fish  start_tests.ps1
modules/common/: lib.cpp  lib_cuda.cu  lib_mpi.cpp
modules/cuda/: video_reduction_cuda.cu
modules/openmp/: video_reduction_omp.cpp
modules/openmpi/: video_reduction_mpi.cpp
modules/sequential/: playground.cc  video_reduction_sequential.cpp
